Fixed image spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@ body {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto;
 }
 .grid {
@@ -17,11 +17,12 @@ body {
 }
 .glacier {
   max-width: 100%;
+  height: 500px;
 }
 section {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 100px auto;
+  padding: 100px 0;
 }
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
@@ -95,8 +96,8 @@ main p {
 footer {
   color: white;
   background-image: linear-gradient(
-      rgba(39, 32, 68, 0.8),
-      rgba(39, 32, 68, 0.8)
+      rgba(39, 32, 68, 0.9),
+      rgba(39, 32, 68, 0.9)
     ),
     url("../images/Reykjavik-Iceland.webp");
   background-repeat: no-repeat;
